# VitCoin

./: .gitignore  CMakeLists.txt  README.md
doc/diagrammi/: arch.puml  flooding.puml  hookp2p.puml  hookpeer.puml  w_balance.puml  w_transaction.puml
doc/relazione/: main.aux  main.lof  main.tex  main.toc
doc/relazione/chapters/: cp01.tex  cp02.tex  cp03.tex  cp04.tex
src/header/: blockchain.h  fullio.h  hash.h  list.h  net.h  p2p.h  rwsincro.h  sockwrap.h  utils.h  vitc.h
src/lib/: blockchain.c  fullio.c  hash.c  list.c  net.c  p2p.c  rwsincro.c  sockwrap.c  utils.c  vitc.c
src/peer/: connected_ent.c  connected_ent.h  main.c  peer.c  peer.h  peer_pkg.c  peer_pkg.h
src/server/: main.c  server.c  server.h
src/wallet/: main.c  wallet.c  wallet.h
